# majority

./: Cargo.toml  README.md
src/: db.rs  lib.rs  majority.rs  majority_judgment.rs  poll.rs  votes.rs
