[package]
name = "majority"
version = "0.1.14"
edition = "2021"
description = "A crate to manage majority judgment polls."
license = "Unlicense"
repository = "https://github.com/Inspirateur/majority"
keywords = ["poll", "voting", "majority", "judgment", "vote"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
